--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "crypto-js": "^3.1.9-1",
+    "http-proxy-middleware": "^0.19.1",
     "js-base64": "^2.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
